--- a/exp_prefix.ipynb
+++ b/exp_prefix.ipynb
@@ -24,11 +24,17 @@
       "[Open3D INFO] WebRTC GUI backend enabled.\n",
       "[Open3D INFO] WebRTCWindowSystem: HTTP handshake server disabled.\n",
       "点云文件路径: d:\\桌面\\实习\\diff_cali\\point_cloud_00000.ply\n",
-      "⚠️  过滤了 2992232 个包含NaN/Inf的点\n",
-      "✓ 成功读取PLY文件: point_cloud_00000.ply, 153496 个点\n",
-      "✓ 成功读取点云，包含 153496 个点\n",
-      "球心位置 (相机坐标系): [6.986, -0.678, 318.206] mm\n",
-      "球心位置 (工具末端坐标系): [-73.412, -104.917, 410.786] mm\n"
+      "点云文件路径: d:\\桌面\\实习\\diff_cali\\point_cloud_00000.ply\n",
+      "⚠️  过滤了 2998819 个包含NaN/Inf的点\n",
+      "✓ 成功读取PLY文件: point_cloud_00000.ply, 146909 个点\n",
+      "✓ 成功读取点云，包含 146909 个点\n",
+      "⚠️  过滤了 2998819 个包含NaN/Inf的点\n",
+      "✓ 成功读取PLY文件: point_cloud_00000.ply, 146909 个点\n",
+      "✓ 成功读取点云，包含 146909 个点\n",
+      "球心位置 (相机坐标系): [11.961, -2.276, 325.588] mm\n",
+      "球心位置 (工具末端坐标系): [-26.417, 159.379, -201.925] mm\n",
+      "球心位置 (相机坐标系): [11.961, -2.276, 325.588] mm\n",
+      "球心位置 (工具末端坐标系): [-26.417, 159.379, -201.925] mm\n"
      ]
     }
    ],
@@ -52,9 +58,9 @@
     "\n",
     "# 直接使用提供的手眼变换矩阵\n",
     "hand_eye_transform = np.array([\n",
-    "    [ 6.79867789e-01,  7.13487890e-01,  1.69454479e-01, -1.31598869e+02],\n",
-    "    [-6.93042707e-01,  7.00664295e-01, -1.69591722e-01, -4.56350777e+01],\n",
-    "    [-2.39732343e-01, -2.13924224e-03,  9.70836664e-01,  1.03533073e+02],\n",
+    "    [-6.18789268e-01, -4.25327100e-01, -6.60451890e-01,  1.95051515e+02],\n",
+    "    [ 7.30008539e-01, -8.08390456e-04, -6.83437546e-01,  3.73163710e+02],\n",
+    "    [ 2.90150607e-01, -9.05039339e-01,  3.10992638e-01, -3.08710791e+02],\n",
     "    [ 0.00000000e+00,  0.00000000e+00,  0.00000000e+00,  1.00000000e+00]\n",
     "])\n",
     "\n",
